tests/duarouter/alternatives/style1_input/errors/route/route_cost_false/errors.duarouter
Error: Attribute 'cost' in definition of route '1' Invalid Number Format (double) xxx.
Quitting (on error).
